Lilliput: Compact object headers